# edc-rs

./: Cargo.toml
.github/workflows/: test.yml
edc-connector-client/: CHANGELOG.md  Cargo.toml
edc-connector-client/examples/: get_asset.rs
edc-connector-client/src/: api.rs  auth.rs  client.rs  error.rs  lib.rs  types.rs
edc-connector-client/src/api/: assets.rs  catalog.rs  celexpressions.rs  contract_agreement.rs  contract_definitions.rs  contract_negotiations.rs  dataplanes.rs  edrs.rs  participants.rs  policies.rs  secrets.rs  transfer_process.rs
edc-connector-client/src/auth/: oauth.rs
edc-connector-client/src/client/: edc_connector_api_version.rs
edc-connector-client/src/types/: asset.rs  callback_address.rs  catalog.rs  common_expression_language.rs  context.rs  contract_definition.rs  contract_negotiation.rs  data_address.rs  dataplane.rs  participants.rs  policy.rs  query.rs  secret.rs  transfer_process.rs
edc-connector-client/src/types/policy/: odrl.rs
edc-connector-client/tests/: asset-tests.rs  auth-tests.rs  catalog-tests.rs  contract-agreement-tests.rs  contract-definition-tests.rs  contract-negotiation-tests.rs  dataplane-tests.rs  edr-tests.rs  policy-tests.rs  secret-tests.rs  transfer-process-tests.rs
edc-connector-client/tests/common/: mod.rs
testing/: docker-compose.yml
testing/conf/consumer-connector.config/: configuration.properties
testing/conf/provider-connector.config/: configuration.properties
testing/keycloak/: realm.json
