[workspace]
resolver="2"
members = [
    "edc-connector-client"
]

[workspace.dependencies]
thiserror = "2.0"
async-trait = "0.1.83"
tracing = "0.1.44"
serde={version = "1", features= ["derive"]}
serde_json= "1"
serde_with= "3.16.1"
tokio= {version="1", features=["full"]}
uuid = { version ="1", features = ["v4"] }
bon = "3.8.1"


[workspace.lints.clippy]
unwrap_used = "deny"
