[package]
name = "edc-connector-client"
version = "0.4.2"
edition = "2021"
license = "Apache-2.0"
description= "A Rust client for EDC"
repository = "https://github.com/wolf4ood/edc-rs"
keywords = ["dataspace", "http"]
categories = []
readme = "README.md"

[dependencies]
reqwest = { version="0.12.26",  features= ["json"]}
tokio = {workspace=true, features = ["sync"]}
oauth2 = "5.0.0"
serde = {workspace = true}
serde_json = {workspace = true}
serde_with = {workspace = true}
thiserror = {workspace=true}
bon = {workspace=true}
async-trait = {workspace=true}

[dev-dependencies]
tokio = {workspace=true, features = ["full"]}
uuid = {workspace=true, features = ["v4"]}
rstest = "0.26.1"
